Add filters to /dataset api
